# pyralid-template

./: .travis.yml  LICENCE.txt  MANIFEST.in  README.md  configure.sh  develop.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: cd-build.yml  ci-build.yml  deploy_build.yml  test_build.yml
banana/: info.py
banana/example/: __init__.py  hello.py
docs/source/: about.rst  citing.rst  conf.py  index.rst  installation.rst  my_ref.bib  notebooks.rst  quickstart.rst  toc.rst
notebooks/: example_notebook.ipynb
package_name/: __init__.py  info.py
package_name/example/: __init__.py  classes.py  hello.py  math.py
package_name/tests/: __init__.py  test_example.py
scripts/: __init__.py  example_script.py
