[aliases]
test = pytest

[metadata]
description-file = README.md

[darglint]
docstring_style = numpy

[flake8]
ignore =
  D107,
  RST304,
  W503
per-file-ignores =
  configure_package_name/__init__.py: WPS410,WPS412
  scripts/*.py: WPS421

[tool:pytest]
testpaths =
  configure_package_name
  scripts
addopts =
  --verbose
  --emoji
  --flake8
  --cov=configure_package_name
  --cov-report=term
  --cov-report=xml
  --junitxml=pytest.xml
